--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ netact_excel_transformer.7z
 netact_excel_transformer.py
 s3tas01(0815-0821).csv
 netact_excel_transformer/netact_excel_transformer.exe
+netact_excel_transformer/CIMS_NE_alarm_20220825 - (1).xlsx
