--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ netact_excel_transformer.py
 s3tas01(0815-0821).csv
 netact_excel_transformer/netact_excel_transformer.exe
 netact_excel_transformer/CIMS_NE_alarm_20220825 - (1).xlsx
+netact_excel_transformer/CIMS_NE_alarm_20220826.xlsx
+netact_excel_transformer/n3tas01(0815-0821) - Copy.csv
+netact_excel_transformer/s3asbc01(0815-0821) - Copy (5).csv
