--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,23 @@ netact_excel_transformer/CIMS_NE_alarm_20220825 - (1).xlsx
 netact_excel_transformer/CIMS_NE_alarm_20220826.xlsx
 netact_excel_transformer/n3tas01(0815-0821) - Copy.csv
 netact_excel_transformer/s3asbc01(0815-0821) - Copy (5).csv
+netact_excel_transformer/netact_excel_transformer_v2.spec
+.gitignore
+netact_excel_transformer/build/netact_excel_transformer_v2/Analysis-00.toc
+netact_excel_transformer/build/netact_excel_transformer_v2/base_library.zip
+netact_excel_transformer/build/netact_excel_transformer_v2/EXE-00.toc
+netact_excel_transformer/build/netact_excel_transformer_v2/netact_excel_transformer_v2.exe.manifest
+netact_excel_transformer/build/netact_excel_transformer_v2/netact_excel_transformer_v2.pkg
+netact_excel_transformer/build/netact_excel_transformer_v2/PKG-00.toc
+netact_excel_transformer/build/netact_excel_transformer_v2/PYZ-00.pyz
+netact_excel_transformer/build/netact_excel_transformer_v2/PYZ-00.toc
+netact_excel_transformer/build/netact_excel_transformer_v2/Tree-00.toc
+netact_excel_transformer/build/netact_excel_transformer_v2/Tree-01.toc
+netact_excel_transformer/build/netact_excel_transformer_v2/Tree-02.toc
+netact_excel_transformer/build/netact_excel_transformer_v2/warn-netact_excel_transformer_v2.txt
+netact_excel_transformer/build/netact_excel_transformer_v2/xref-netact_excel_transformer_v2.html
+netact_excel_transformer/build/netact_excel_transformer_v2/localpycs/pyimod01_archive.pyc
+netact_excel_transformer/build/netact_excel_transformer_v2/localpycs/pyimod02_importers.pyc
+netact_excel_transformer/build/netact_excel_transformer_v2/localpycs/pyimod03_ctypes.pyc
+netact_excel_transformer/build/netact_excel_transformer_v2/localpycs/struct.pyc
+netact_excel_transformer/dist/netact_excel_transformer_v2.exe
