--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ netact_excel_transformer/build/netact_excel_transformer_v2/localpycs/pyimod02_im
 netact_excel_transformer/build/netact_excel_transformer_v2/localpycs/pyimod03_ctypes.pyc
 netact_excel_transformer/build/netact_excel_transformer_v2/localpycs/struct.pyc
 netact_excel_transformer/dist/netact_excel_transformer_v2.exe
+netact_excel_transformer/netact_excel_transformer_v2.exe
+netact_excel_transformer/CIMS_NE_alarm_20220826 - (1).xlsx
