configuration comparison program finished

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,8 @@ netact_excel_transformer/netact_excel_transformer_v2.exe
 netact_excel_transformer/CIMS_NE_alarm_20220826 - (1).xlsx
 netact_excel_transformer/~$CIMS_NE_alarm_20220826 - (2).xlsx
 netact_excel_transformer/CIMS_NE_alarm_20220826 - (2).xlsx
+string_compare/configuration_current_202208301219- after.txt
+string_compare/configuration_current_202208301219.txt
+string_compare/configuration_current.txt
+string_compare/N3CFX01_config_20220822-1122- after.txt
+string_compare/N3CFX01_config_20220822-1122.txt
