--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,8 @@ config_compare/configuration_current.txt
 config_compare/N3CFX01_config_20220822-1122- after.txt
 string_compare/config_compare_all_table.py
 string_compare/config_compare_single_table.py
+config_compare/dist
+config_compare/build
+config_compare/config_compare_all_table.spec
+config_compare/configuration_current_202208301219 - after.txt
+config_compare/N3CFX01_config_20220822-1122 - after.txt
